--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "prettier": "^2.0.5"
+    "mocha": "^8.1.3",
+    "prettier": "^2.0.5",
+    "supertest": "^4.0.2"
   }
 }
