--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "postgres-express-backend",
-  "version": "1.0.0",
+  "name": "secure-forms-api",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -53,6 +53,7 @@
     "sequelize": "^5.21.7"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "mocha": "^8.1.3",
     "prettier": "^2.0.5",
