--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,10 @@ jobs:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
     - name: Push to Heroku
       env:
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: git push heroku master 
+        HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
+        HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }} 
+      if: github.ref == 'refs/heads/master' && job.status == 'success'
+      run: git push https://heroku:$HEROKU_API_TOKEN@git.heroku.com/$HEROKU_APP_NAME.git origin/master:master
     - name: Run Seed
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
@@ -31,4 +33,4 @@ jobs:
     - name: Boot API
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: heroku run npm run sstart -a ${{ secrets.HEROKU_API_KEY }}
+      run: heroku run npm run start -a ${{ secrets.HEROKU_API_KEY }}
