--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,18 +12,22 @@ jobs:
       matrix:
         node-version: [13.3]
     steps:
-    - uses: actions/checkout@v1
-    - name: Check for Updates
-      run: npm update heroku 
-    - name: Login to Heroku Container registry
-      env: 
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: heroku container:login 
-    - name: Build and push
-      env:
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: heroku container:push -a ${{ secrets.HEROKU_APP_NAME }} web 
-    - name: Release
-      env:
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: heroku container:release -a ${{ secrets.HEROKU_APP_NAME }} web 
+     - uses: actions/checkout@master
+     - name: login
+       uses: actions/heroku@master
+       env:
+         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+       with:
+         args: container:login
+     - name: push
+       uses: actions/heroku@master
+       env:
+         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+       with:
+         args: container:push -a american-hangar web
+     - name: release
+       uses: actions/heroku@master
+       env:
+         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+       with:
+         args: container:release -a american-hangar web
