--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,10 @@ jobs:
        env:
          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
        with:
-         args: container:push -a american-hangar web
+         args: container:push -a secure-form-api web
      - name: release
        uses: actions/heroku@master
        env:
          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
        with:
-         args: container:release -a american-hangar web
+         args: container:release -a secure-form-api web
