--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
-name: Deploy to Heroku
+name: Deploy
 
-on: 
+on:
   push:
     branches:
       - master
@@ -8,26 +8,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [13.3]
     steps:
-     - uses: actions/checkout@master
-     - name: login
-       uses: actions/heroku@master
-       env:
-         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-       with:
-         args: container:login
-     - name: push
-       uses: actions/heroku@master
-       env:
-         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-       with:
-         args: container:push -a secure-form-api web
-     - name: release
-       uses: actions/heroku@master
-       env:
-         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-       with:
-         args: container:release -a secure-form-api web
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.4.6 # This is the action
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
