--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "chalk-animation": "^1.6.0",
+    "connect-session-sequelize": "^7.0.1",
     "cors": "^2.8.5",
     "css-mqpacker": "^4.0.0",
     "express": "^4.17.1",
