--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "css-mqpacker": "^4.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "fs": "0.0.1-security",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.0",
