--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,7 @@ updates:
     schedule:
       timezone: "America/New_York" # Eastern Standard Time (UTC -04:00)
       interval: "daily"
-      time: "09:00"
+      time: "17:30" # temporarily set to 5:30 to test
     allow:
       - dependency-type: "production"
     labels: # Raise all PR's with custom labels
@@ -21,7 +21,7 @@ updates:
     schedule:
       timezone: "America/New_York"  # Eastern Standard Time (UTC -04:00)
       interval: "daily"
-      time: "09:00"
+      time: "17:30"
     labels:
       - "dependencies"
       - "github-actions"
