--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,7 +20,7 @@ updates:
     schedule:
       timezone: "America/New_York"  # Eastern Standard Time (UTC -04:00)
       interval: "daily"
-      time: "09:00
+      time: "09:00"
     labels:
       - "dependencies"
       - "security"
