--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,47 @@
-name: "Deploy to Heroku"
+name: Node.js CI
 
 on:
-  push:
-    branches:
+  pull_request:
+    branches: 
       - master
 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build:
+  # This workflow contains a single job called "test"
+  test:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
-        node: [ '13.3.0' ]
+        node-version: ['13.3.0']
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.4.6
-        with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
-          heroku_email: ${{secrets.HEROKU_EMAIL}}
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v2
+      # Uses recommended note setup
+    - name: Setup Node.js version ${{ matrix.node-version }}
+      uses: actions/setup-node@v1.4.3
+      with:
+        node-version: ${{ matrix.node-version }}
+      # Cache the node_modules for faster workflow
+    - name: Cache node modules
+      uses: actions/cache@v2
+      env:
+        cache-name: cache-node-modules
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.OS }}-node-
+          ${{ runner.OS }}-
+      
+      # Runs a single command using the runners shell
+    - name: Install Dependencies
+      run: npm ci
+
+      # Runs a set of commands using the runners shell
+    - name: Running tests
+      run: npm test
+      env:
+        CI: true
