--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -8,7 +8,8 @@ on:
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
-
+    
+    if: github.actor == 'dependabot[bot]'
     steps:
       - uses: actions/checkout@v2
       - uses: ahmadnassri/action-dependabot-auto-merge@v2
