--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV='test' mocha \"./server/**/*.spec.js\"",
+    "sass": "node-sass -w sass/ -o css/",
     "seed": "node server/utils/seed.js",
     "methods": "node server/utils/methods.js",
     "start": "node index.js",
