--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-      # Uses recommended note setup
+      # Uses recommended node setup
     - name: Setup Node.js version ${{ matrix.node-version }}
       uses: actions/setup-node@v2.1.1
       with:
