--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "secure-forms-api",
+  "name": "secure-form-api",
   "version": "2.0.0",
   "description": "",
   "main": "index.js",
@@ -54,6 +54,7 @@
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
+    "airbnb-style": "^2.0.0",
     "chai": "^4.2.0",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
