--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         node-version: ['13.3.0']
 
-    if: github.actor !== 'dependabot[bot]'
+    if: github.actor != 'dependabot[bot]'
     steps:
         # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout code
