--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-node": "^11.1.0",
     "mocha": "^8.1.3",
     "prettier": "^2.0.5",
     "supertest": "^4.0.2"
