--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "test": "NODE_ENV='test' mocha \"./server/**/*.spec.js\"",
     "seed": "node server/utils/seed.js",
     "methods": "node server/utils/methods.js",
-    "start": "node index.js",
-    "serve-client": "node client/index.js",
-    "server-start": "node server/index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
