--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,6 @@
 version: 2
 updates:
-# Maintain dependencies for Node Package Manager
+  # Maintain dependencies for Node Package Manager
   - package-ecosystem: "npm"
     directory: "/"
     target-branch: "master"
@@ -13,14 +13,15 @@ updates:
     labels: # Raise all PR's with custom labels
       - "dependencies"
       - "security"
-# Maintain dependencies for GitHub Actions    
+  # Maintain dependencies for GitHub Actions
   - package-ecosystem: "github-actions"
     directory: "/"
     target-branch: "master"
     schedule:
-      timezone: "America/New_York"  # Eastern Standard Time (UTC -04:00)
+      timezone: "America/New_York" # Eastern Standard Time (UTC -04:00)
       interval: "daily"
       time: "09:00"
     labels:
       - "dependencies"
       - "actions"
+      - "security"
