added auto approval and merging commands
Signed-off-by: cofuente <contact@cofuente.io>

--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -15,3 +15,5 @@ jobs:
       - uses: ahmadnassri/action-dependabot-auto-merge@v2.1.4
         with:
           github-token: ${{secrets.GH_TOKEN}}
+          approve: true
+          command: merge
