--- a/.github/auto-merge.yml
+++ b/.github/auto-merge.yml
@@ -1,3 +1,11 @@
 - match:
     dependency_type: all
-    update_type: "security:all"
+    update_type: semver:patch
+
+- match:
+    dependency_type: all
+    update_type: security:minor
+
+- match:
+    dependency_type: all
+    update_type: security:patch
