edited to include all security updates
Signed-off-by: cofuente <contact@cofuente.io>

--- a/.github/auto-merge.yml
+++ b/.github/auto-merge.yml
@@ -4,8 +4,4 @@
 
 - match:
     dependency_type: all
-    update_type: security:minor
-
-- match:
-    dependency_type: all
-    update_type: security:patch
+    update_type: security:all
