--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -28,6 +28,7 @@ jobs:
           VALIDATE_MD: true
           VALIDATE_JSON: true
           VALIDATE_JAVASCRIPT_ES: true
+          LINTER_RULES_PATH: ./
           JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.js
           VALIDATE_HTML: true
           VALIDATE_CSS: true
