--- a/package.json
+++ b/package.json
@@ -25,16 +25,11 @@
     "chalk": "^4.1.0",
     "chalk-animation": "^1.6.0",
     "connect-session-sequelize": "^7.0.4",
-    "cors": "^2.8.5",
-    "css-mqpacker": "^7.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "fs": "0.0.1-security",
-    "imagemin-pngquant": "^9.0.1",
-    "jade": "^1.11.0",
     "morgan": "^1.10.0",
     "pg": "^8.4.2",
-    "request": "^2.88.2",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
@@ -42,6 +37,7 @@
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-node": "^11.1.0",
     "mocha": "^8.1.3",
