--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "NODE_ENV='test' mocha \"./server/**/*.spec.js\"",
     "seed": "node server/utils/seed.js",
     "methods": "node server/utils/methods.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "lint": "npm run update-linter && eslint -c ./.eslintrc.js .",
+    "lint:fix": "npm run update-linter && eslint -c ./.eslintrc.js . --fix",
+    "update-linter": "npx install-peerdeps --dev eslint-config-airbnb-base && npx install-peerdeps --dev eslint-config-prettier"
   },
   "repository": {
     "type": "git",
@@ -40,8 +43,9 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "mocha": "^8.1.3",
-    "prettier": "^2.0.5",
+    "prettier": "^2.1.2",
     "supertest": "^4.0.2"
   }
 }
