--- a/package.json
+++ b/package.json
@@ -43,9 +43,16 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
     "mocha": "^8.1.3",
     "prettier": "^2.1.2",
     "supertest": "^4.0.2"
+  },
+  "prettier": {
+    "useTabs": false,
+    "trailingComma": "none",
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": true,
+    "printWidth": 140
   }
 }
