--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
+    "chalk": "^4.1.0",
     "chalk-animation": "^1.6.0",
     "connect-session-sequelize": "^7.0.4",
     "express": "^4.17.1",
