--- a/.github/workflows/test-linter.yml
+++ b/.github/workflows/test-linter.yml
@@ -35,6 +35,6 @@ jobs:
       run: npm run update-linter
 
     - name: Running Linter
-      run: eslint -c ./.eslintrc.js .
+      run: npm run eslint -c ./.eslintrc.js .
       env:
         CI: true
