--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -27,9 +27,7 @@ jobs:
           VALIDATE_YAML: true
           VALIDATE_MD: true
           VALIDATE_JSON: true
-          VALIDATE_JAVASCRIPT_ES: true
-          LINTER_RULES_PATH: /
-          JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.js
+          VALIDATE_JAVASCRIPT_ES: false
           VALIDATE_HTML: true
           VALIDATE_CSS: true
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
