switched master references to main
Signed-off-by: Chiara Marcial Martínez <contact>

--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Run Super-Linter
         uses: github/super-linter@v3
         env:
-          DEFAULT_BRANCH: master
+          DEFAULT_BRANCH: main
           VALIDATE_ALL_CODEBASE: true
           VALIDATE_YAML: true
           VALIDATE_MD: true
