--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,7 @@ updates:
   # Maintain dependencies for Node Package Manager
   - package-ecosystem: "npm"
     directory: "/"
-    target-branch: "master"
+    target-branch: "main"
     schedule:
       timezone: "America/New_York" # Eastern Standard Time (UTC -04:00)
       interval: "daily"
@@ -16,7 +16,7 @@ updates:
   # Maintain dependencies for GitHub Actions
   - package-ecosystem: "github-actions"
     directory: "/"
-    target-branch: "master"
+    target-branch: "main"
     schedule:
       timezone: "America/New_York" # Eastern Standard Time (UTC -04:00)
       interval: "daily"
