build(package.json): add necessary config for commitizen
commitizen requires a path to the commit conventions used

--- a/package.json
+++ b/package.json
@@ -56,5 +56,10 @@
     "semi": false,
     "singleQuote": true,
     "printWidth": 140
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
