docs(package.json): update author field to appropriate syntax
also added contributors array with person objects with contact info

--- a/package.json
+++ b/package.json
@@ -20,7 +20,19 @@
   "engines": {
     "node": "14.11.0"
   },
-  "author": "Chiara Marcial Martínez, Mohawk Greene",
+  "author": "Chiara Marcial Martínez <contact@cofuente.io> (https://cofuente.io)",
+  "contributors": [
+    {
+      "name" : "Mohawk Greene",
+      "email" : "technology@nextdistro.org",
+      "url" : "https://github.com/drakeltheryuujin"
+    },
+    {
+      "name" : "Amy Zeng",
+      "email" : "amyzeng.am@gmail.com",
+      "url" : "https://github.com/amyvzeng"
+    }
+  ],
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/next-harm-reduction/secure-form-api/issues"
