--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
       "name": "Amy Zeng",
       "email": "amyzeng.am@gmail.com",
       "url": "https://github.com/amyvzeng"
+    },
+    {
+      "name": "Kestrel Gorlick",
+      "email": "kestrel.gorlick@gmail.com",
+      "url": "https://github.com/kestrelgorlick"
     }
   ],
   "license": "ISC",
