--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ updates:
   # Maintain dependencies for Node Package Manager
   - package-ecosystem: "npm"
     directory: "/"
-    target-branch: "main"
+    target-branch: "staging"
     schedule:
       timezone: "America/New_York" # Eastern Standard Time (UTC -04:00)
       interval: "daily"
