--- a/.github/Dependabot.yml
+++ b/.github/Dependabot.yml
@@ -8,7 +8,7 @@ updates:
       timezone: "America/New_York"
     labels:
       - "security"
-      - "npm"
+      - "dependency"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
@@ -17,3 +17,4 @@ updates:
       timezone: "America/New_York"
     labels:
       - "security"
+      - "actions"
