--- a/.github/workflows/Automerge.yml
+++ b/.github/workflows/Automerge.yml
@@ -1,9 +1,7 @@
 name: "Automerge Dependabot"
 
 on:
-  pull_request:
-    branches:
-      - staging
+  pull_request_target:
 
 jobs:
   auto-merge:
