--- a/.github/workflows/Automerge.yml
+++ b/.github/workflows/Automerge.yml
@@ -1,7 +1,6 @@
 name: "Automerge For Dependabot"
 
-on:
-  pull_request:
+on: pull_request
 
 jobs:
   auto-merge:
@@ -12,6 +11,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ahmadnassri/action-dependabot-auto-merge@v2.3.1
         with:
+          config: .github/auto-merge.yml
+          target: minor
           github-token: ${{secrets.GH_TOKEN}}
           approve: true
           command: merge
