--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: ahmadnassri/action-dependabot-auto-merge@v2.3.1
         with:
           config: .github/auto-merge.yml
-          target: minor
+          target: patch
           github-token: ${{secrets.GH_TOKEN}}
           approve: true
           command: merge
