--- a/.github/workflows/ProductionDeploy.yml
+++ b/.github/workflows/ProductionDeploy.yml
@@ -16,5 +16,5 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: ${{secrets.HEROKU_APP_NAME_STAGING}}
+          heroku_app_name: ${{secrets.HEROKU_APP_NAME_PRODUCTION}}
           heroku_email: ${{secrets.HEROKU_EMAIL}}
