--- a/.github/workflows/StagingDeploy.yml
+++ b/.github/workflows/StagingDeploy.yml
@@ -19,4 +19,4 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: ${{secrets.HEROKU_APP_NAME_STAGING}}
           heroku_email: ${{secrets.HEROKU_EMAIL}}
-          branch: staging
+          branch: "staging"
