--- a/.github/workflows/StagingDeploy.yml
+++ b/.github/workflows/StagingDeploy.yml
@@ -3,20 +3,21 @@ name: "Deploy to Heroku Staging"
 on:
   push:
     branches:
-      - staging
+      - staging # Changing the branch here would also work
 
 jobs:
- 
-  deploy:
+  build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node: ["14.17.0"]
     steps:
       - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.12.12
+      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: ${{secrets.HEROKU_APP_NAME_STAGING}}
           heroku_email: ${{secrets.HEROKU_EMAIL}}
-          branch: "staging"
+          justlogin: true
+      - run: heroku auth:whoami
+      - run: heroku deploy 
