--- a/.github/workflows/StagingDeploy.yml
+++ b/.github/workflows/StagingDeploy.yml
@@ -22,9 +22,11 @@ jobs:
           
   notify:
     name: Discord Notification
+    runs-on: ubuntu-latest
     needs: # make sure the notification is sent AFTER the jobs you want included have completed
       - deploy
     if: ${{ always() }} # You always want to be notified: success, failure, or cancelled
+    steps:
       - name: Notify
         uses: nobrayner/discord-webhook@v1
         with:
