--- a/.github/workflows/StagingDeploy.yml
+++ b/.github/workflows/StagingDeploy.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Notify
         uses: nobrayner/discord-webhook@v1
         with:
-          github-token: ${{ secrets.github_token }}
+          github-token: ${{ secrets.GH_TOKEN }}
           discord-webhook: ${{ secrets.DISCORD_ALERTS }}
