--- a/.github/workflows/ProductionDeploy.yml
+++ b/.github/workflows/ProductionDeploy.yml
@@ -18,3 +18,14 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: ${{secrets.HEROKU_APP_NAME_PRODUCTION}}
           heroku_email: ${{secrets.HEROKU_EMAIL}}
+  notify:
+    name: Discord Notification
+    runs-on: ubuntu-latest
+    needs: # make sure the notification is sent AFTER the jobs you want included have completed
+      - deploy
+    if: ${{ always() }} # You always want to be notified: success, failure, or cancelled
+    steps:
+      - name: Notify
+        uses: nobrayner/discord-webhook@v1
+        with:
+          github-token: ${{ secrets.GH_TOKEN }}
