--- a/.github/workflows/ESLinter.yml
+++ b/.github/workflows/ESLinter.yml
@@ -41,3 +41,4 @@ jobs:
         uses: nobrayner/discord-webhook@v1
         with:
           github-token: ${{ secrets.GH_TOKEN }}
+          discord-webhook: ${{ secrets.DISCORD_ALERTS }}
