--- a/.github/workflows/PostmanTest.yml
+++ b/.github/workflows/PostmanTest.yml
@@ -36,3 +36,16 @@ jobs:
       with: 
        name: RunReports
        path: testResults
+  notify:
+    name: Discord Notification
+    runs-on: ubuntu-latest
+    needs: # make sure the notification is sent AFTER the jobs you want included have completed
+      - test-api
+    if: ${{ always() }} # You always want to be notified: success, failure, or cancelled
+    steps:
+      - name: Notify
+        uses: nobrayner/discord-webhook@v1
+        with:
+          github-token: ${{ secrets.GH_TOKEN }}
+          discord-webhook: ${{ secrets.DISCORD_ALERTS }}
+   
