--- a/.github/workflows/ESLinter.yml
+++ b/.github/workflows/ESLinter.yml
@@ -35,7 +35,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: # make sure the notification is sent AFTER the jobs you want included have completed
       - es-lint
-    if: ${{ always() }} # You always want to be notified: success, failure, or cancelled
+    if: ${{ failure() }} # You always want to be notified: success, failure, or cancelled
     steps:
       - name: Notify
         uses: nobrayner/discord-webhook@v1
