--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -15,3 +15,15 @@ jobs:
           github-token: ${{secrets.GH_TOKEN}}
           approve: true
           command: merge
+  notify:
+    name: Discord Notification
+    runs-on: ubuntu-latest
+    needs: # make sure the notification is sent AFTER the jobs you want included have completed
+      - auto-merge
+    if: ${{ always() }} # You always want to be notified: success, failure, or cancelled
+    steps:
+      - name: Notify
+        uses: nobrayner/discord-webhook@v1
+        with:
+          github-token: ${{ secrets.GH_TOKEN }}
+          discord-webhook: ${{ secrets.DISCORD_ALERTS }}
