--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "just-lint": "npx eslint -c ./.eslintrc.js .",
-    "lint": "npm run update-linter && eslint -c ./.eslintrc.js .",
-    "lint:fix": "npm run update-linter && eslint -c ./.eslintrc.js . --fix",
-    "update-linter": "npx install-peerdeps --dev eslint-config-airbnb-base && npx install-peerdeps --dev eslint-config-prettier"
+    "just-lint": "npx eslint -c ./.eslintrc.js . --ext .js",
+    "lint": "npm run update-linter && eslint -c ./.eslintrc.js . --ext .js",
+    "lint:fix": "npm run update-linter && eslint -c ./.eslintrc.js . --ext .js  --fix",
+    "update-linter": "npx install-peerdeps --dev eslint && npx install-peerdeps --dev eslint-config-prettier && npx install-peerdeps --dev prettier"
   },
   "author": "Chiara Marcial Martínez <contact@cofuente.io> (https://cofuente.io)",
   "contributors": [
