--- a/.github/workflows/PostmanTest.yml
+++ b/.github/workflows/PostmanTest.yml
@@ -1,4 +1,4 @@
-name: Postman Test
+name: "Postman Test Runner"
 on:
   push:
     branches:
@@ -14,7 +14,7 @@ jobs:
     - name: Install Node
       uses: actions/setup-node@v2.2.0
       with: 
-        node-version: '14.x'
+        node-version: '14.17.0'
     
     # Install the newman command line utility and also install the html extra reporter
     - name: Install newman
