--- a/.github/workflows/dependabot-discord.yml
+++ b/.github/workflows/dependabot-discord.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: rjstone/discord-webhook-notify@v1
       with:
-        webhookUrl: ${{ secrets.DISCORD_ALERTS }}
+        webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
         severity: info
         description: ' Dependabot Pull Request ${{ github.event.pull_request.title }}'
         footer: ${{ github.event.pull_request.name }}.
