--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "just-lint": "npx eslint -c ./.eslintrc.js . --ext .js",
     "lint": "npm run update-linter && eslint -c ./.eslintrc.js . --ext .js",
     "lint:fix": "npm run update-linter && eslint -c ./.eslintrc.js . --ext .js  --fix",
-    "update-linter": "npx install-peerdeps --dev eslint && npx install-peerdeps --dev eslint-config-prettier && npx install-peerdeps --dev prettier"
+    "update-linter": "npx install-peerdeps --dev eslint && npx install-peerdeps --dev eslint-config-prettier && npx install-peerdeps --dev prettier && npx install-peerdeps --dev babel-eslint"
   },
   "author": "Chiara Marcial Martínez <contact@cofuente.io> (https://cofuente.io)",
   "contributors": [
@@ -61,6 +61,7 @@
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^10.0.0",
     "eslint": "^7.30.0",
