--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "seed": "node server/utils/seed.js",
+    "methods": "node server/utils/methods.js",
     "just-lint": "npx eslint -c ./.eslintrc.js . --ext .js",
     "lint": "npm run update-linter && eslint -c ./.eslintrc.js . --ext .js",
     "lint:fix": "npm run update-linter && eslint -c ./.eslintrc.js . --ext .js  --fix",
