--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,6 +1,9 @@
 name: "Automerge For Dependabot"
 
-on: pull_request_target
+on: 
+  pull_request_target:
+    branches: ['dependabot/npm_and_yarn/**']
+  
 
 jobs:
   auto-merge:
@@ -20,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: # make sure the notification is sent AFTER the jobs you want included have completed
       - auto-merge
-    if: ${{ always() }} && github.actor == 'dependabot[bot]' # You always want to be notified: success, failure, or cancelled
+    if: ${{ always() && github.actor == 'dependabot[bot]' }} # You always want to be notified: success, failure, or cancelled
     steps:
       - name: Notify
         uses: nobrayner/discord-webhook@v1
