--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -2,7 +2,7 @@ name: "Automerge For Dependabot"
 
 on: 
   pull_request_target:
-    branches: ['dependabot/npm_and_yarn/**']
+    branches: ['dependabot/**']
   
 
 jobs:
