--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "just-lint": "npx eslint -c ./.eslintrc.js . --ext .js",
     "lint": "npm run update-linter && eslint -c ./.eslintrc.js . --ext .js",
     "lint:fix": "npm run update-linter && eslint -c ./.eslintrc.js . --ext .js  --fix",
-    "update-linter": "npx install-peerdeps --dev eslint && npx install-peerdeps --dev eslint-config-prettier && npx install-peerdeps --dev prettier && npx install-peerdeps --dev babel-eslint"
+    "update-linter": "npx install-peerdeps --dev eslint && npx install-peerdeps --dev eslint-config-prettier && npx install-peerdeps --dev prettier"
   },
   "author": "Chiara Marcial Martínez <contact@cofuente.io> (https://cofuente.io)",
   "contributors": [
