--- a/.github/workflows/PostmanTest.yml
+++ b/.github/workflows/PostmanTest.yml
@@ -7,7 +7,7 @@ jobs:
   test-api:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2
       - uses: matt-ball/newman-action@master
         with: # This is being done via the API
           apiKey: ${{ secrets.POSTMAN_API_KEY }}
