--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "express-session": "^1.17.2",
     "fs": "0.0.1-security",
     "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.5.1",
     "postgresql": "0.0.1",
     "sequelize": "^6.6.5"
