--- a/.github/workflows/PostmanTest.yml
+++ b/.github/workflows/PostmanTest.yml
@@ -13,6 +13,7 @@ jobs:
           apiKey: ${{ secrets.POSTMAN_API_KEY }}
           collection: ${{ secrets.POSTMAN_COLLECTION_ID }}
           environment: ${{ secrets.POSTMAN_ENVIRONMENT }}
+          reporter: newman-reporter-htmlextra
   
   notify:
     name: Discord Notification
