--- a/.github/workflows/PostmanTest.yml
+++ b/.github/workflows/PostmanTest.yml
@@ -8,8 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: anthonyvscode/newman-action@v1
-      - id: run-api-tests
+      - name: Run Newman
+        uses: anthonyvscode/newman-action@v1
+        id: run-api-tests
         with: # This is being done via the API
           apiKey: ${{ secrets.POSTMAN_API_KEY }}
           collection: ${{ secrets.POSTMAN_COLLECTION_ID }}
