--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "homepage": "https://github.com/next-harm-reduction/secure-form-api#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-session-sequelize": "^7.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
