--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lint:fix": "npm run update-linter && eslint -c ./.eslintrc.js . --ext .js  --fix",
     "update-linter": "npx install-peerdeps --dev eslint && npx install-peerdeps --dev eslint-config-prettier && npx install-peerdeps --dev prettier"
   },
-  "pre-commit": [ "just-lint" ],
+  "pre-commit": [
+    "just-lint"
+  ],
   "author": "Chiara Marcial Martínez <contact@cofuente.io> (https://cofuente.io)",
   "contributors": [
     {
