--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "fs": "0.0.1-security",
+    "helmet": "^4.6.0",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
